--- a/inst/extdata/knitr-report-template.Rnw
+++ b/inst/extdata/knitr-report-template.Rnw
@@ -1,71 +1,97 @@
-\documentclass{article}
-\usepackage[sc]{mathpazo}
-\renewcommand{\sfdefault}{lmss}
-\renewcommand{\ttdefault}{lmtt}
-\usepackage[T1]{fontenc}
-\usepackage{geometry}
-\geometry{verbose,tmargin=2.5cm,bmargin=2.5cm,lmargin=2.5cm,rmargin=2.5cm}
-\setcounter{secnumdepth}{2}
-\setcounter{tocdepth}{2}
-\usepackage[unicode=true,pdfusetitle,
- bookmarks=true,bookmarksnumbered=true,bookmarksopen=true,bookmarksopenlevel=2,
- breaklinks=false,pdfborder={0 0 1},backref=false,colorlinks=false]
- {hyperref}
-\hypersetup{
- pdfstartview={XYZ null null 1}}
-\usepackage{breakurl}
+\documentclass[12pt]{article}
+\usepackage{fullpage}
+\pagestyle{empty}
+\newif\ifincludeHash
+\newif\ifincludeKmerHash
+\newif\ifuseLandscape
+\useLandscapefalse
+\includeHashfalse
+\includeKmerHashfalse
+<<landscape,echo=FALSE,results="asis">>=
+if (exists("landscape") && landscape)
+  cat("\\useLandscapetrue")
+@
+\ifuseLandscape
+\usepackage[landscape,margin=0.5in]{geometry}
+\else
+\usepackage[margin=0.5in]{geometry}
+\fi
 
-\makeatletter
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% User specified LaTeX commands.
-\renewcommand{\textfraction}{0.05}
-\renewcommand{\topfraction}{0.8}
-\renewcommand{\bottomfraction}{0.8}
-\renewcommand{\floatpagefraction}{0.75}
+\renewcommand{\familydefault}{\sfdefault}
 
-\makeatother
+\title{Sequence Quality Report from \texttt{qrqc}}
+\author{}
+\date{\today}
 
 \begin{document}
 
+\maketitle
+
 <<setup,include=FALSE,cache=FALSE>>=
-  opts_chunk$set(fig.width=8, fig.height=6, fig.path = 'figure')
-@
+fig.dir <- file.path(outdir, "fig")
+opts <- opts_chunk$set(fig.path=fig.dir, fig.align='center', 
+                  fig.width=FIG.WIDTH, fig.height=FIG.HEIGHT)
+@ 
+\thispagestyle{empty}
+\section[]{General Information}
+<<filetable,include=FALSE,cache=FALSE,message=FALSE,results="asis">>=
+fileTable(x)
+@ 
+\newpage
 
-% \section{General Information}
-% File: \Sexpr{x@filename}\\
-% Type: \Sexpr{getType(x)}\\
-% Sequence Length Range: \Sexpr{seqLengthRange(x)[1]} to \Sexpr{seqLengthRange(x)[2]}\\
-% Total Sequences: \Sexpr{sum(x@seq.lengths)}\\
-% Sequences hashed: \Sexpr{x@hashed}\\
-% Unique Sequences: \Sexpr{if (!(ll <- length(x@hash))) NA else ll}\\
-% k-mers hashed: \Sexpr{x@kmers.hashed}\\
-% k: \Sexpr{if (!length(x@k)) NA else x@k}\\
-% Proportion reads hashed: \Sexpr{if (!length(x@hash.prop)) NA else x@hash.prop}\\
-  
+\section[]{Sequence Quality}
+<<qualplot,echo=FALSE,warning=FALSE,message=FALSE>>=
+qualPlot(x)
+@ 
+\newpage
 
+\section[]{Nucleotide Proportion by Position}
+<<baseplot,echo=FALSE,warning=FALSE,message=FALSE>>=
+basePlot(x, type="proportion")
+@ 
+\newpage
 
-\section{Quality by Position}
-<<qualplot, echo=FALSE, message=FALSE, fig.align="left">>=
-  if (getType(x) == "FASTQ") {
-    qualPlot(x)
-  } else {
-    cat("No quality data for FASTA file.")
-  }
+\section[]{N Frequency by Position}
+<<Nfreq,echo=FALSE,warning=FALSE,message=FALSE>>=
+#basePlot(x, bases='N')
+@ 
+\newpage
+
+\section[]{GC Content by Position}
+<<GCfreq,echo=FALSE,warning=FALSE,message=FALSE>>=
+gcPlot(x)
+@ 
+\newpage
+
+\section{Sequence Length}
+<<seqlen,echo=FALSE,warning=FALSE,message=FALSE>>=
+seqlenPlot(x)
+@ 
+\newpage
+
+<<includeHash,echo=FALSE,warning=FALSE,message=FALSE,results="asis">>=
+if (exists("include.hash") && include.hash)
+  cat("\\includeHashtrue")
+@ 
+\ifincludeHash
+\subsection{Most Frequent Sequences}
+<<hashed,echo=FALSE,warning=FALSE,message=FALSE,results="asis">>=
+cat(makeHashTable(x))
+@ 
+\fi
+\newpage
+
+<<includeKmerHash,echo=FALSE,warning=FALSE,message=FALSE,results="asis">>=
+if (exists("include.kmers") && include.kmers)
+  cat("\\includeKmerHashtrue")
 @ 
 
-\section{Nucleotide Proportion by Position}
-<<baseplot, echo=FALSE, message=FALSE, fig.align="left">>=
-  basePlot(x, type="proportion")
+\ifincludeKmerHash
+\section{Positional k-mer Abundance}
+<<kmerHashed,echo=FALSE,warning=FALSE,message=FALSE>>=
+kmerKLPlot(x)
 @ 
-
-  
-The R session information (including the OS info, R version and all
-packages used):
-<<session-info, cache=FALSE>>=
-sessionInfo()
-Sys.time()
-@
-<<clean-up, include=FALSE>>=
-rm(.knitr.author); rm(.knitr.author)
-@
+\fi
+\newpage
 
 \end{document}
