--- a/inst/doc/qrqc.Rnw
+++ b/inst/doc/qrqc.Rnw
@@ -400,7 +400,7 @@ Thanks to Heng Li for his work on \texttt{kseq.h} \texttt{khash.h}
 Bioinformatics Github repository:
 \url{https://github.com/ucdavis-bioinformatics/sickle}.
 
-\section{Session Info}
+\section{Session Information}
 <<>>=
 sessionInfo()
 @
